<resources>
    <string name="app_name">PRU</string>
    <string name="texto_item_list">TESTE</string>
    <string name="texto_num1">1</string>
    <string name="texto_num2">2</string>
    <string name="texto_num3">3</string>
    <string name="texto_num4">4</string>
    <string name="texto_num5">5</string>
    <string name="texto_num6">6</string>
    <string name="texto_num7">7</string>
    <string name="texto_num8">8</string>
    <string name="texto_num9">9</string>
    <string name="texto_padrao_canc">APAGAR</string>
    <string name="texto_num0">0</string>
    <string name="texto_num00">00</string>
    <string name="texto_virg">,</string>
    <string name="texto_padrao_ok">OK</string>
    <string name="texto_menu_principal">PRINCIPAL - V 1.0</string>
    <string name="texto_lider">MATRIC. COLABORADOR:</string>
    <string name="texto_atualizar_dados">ATUALIZAR DADOS</string>
    <string name="texto_padrao_retornar">RETORNAR</string>
    <string name="texto_turma">TURMA</string>
    <string name="texto_funcionarios">FUNCIONARIOS</string>
    <string name="texto_desmarcar">DESMARCAR TODOS</string>
    <string name="texto_marcar">MARCAR TODOS</string>
    <string name="texto_lista_menu_princ">MENU PRINCIPAL</string>
    <string name="texto_os">NUM. OS:</string>
    <string name="texto_atividade">ATIVIDADE</string>
    <string name="texto_atualizar">ATUALIZAR</string>
    <string name="texto_tipo_config">TIPO</string>
    <string name="texto_turma_config">TURMA</string>
    <string name="texto_lider_func_config">LÍDER:</string>
    <string name="texto_padrao_cancelar">CANC.</string>
    <string name="texto_padrao_salvar">SALVAR</string>
    <string name="texto_motivo_parada">MOTIVOS DE PARADA</string>
    <string name="texto_titulo_desc_os">DESCRIÇÃO DA OS</string>
    <string name="texto_descr_os">OS 100580\nSEÇÃO 700\nFRANCISCO C. R. DE CAMARGO</string>
    <string name="texto_num_linha_config">NUM. LINHA:</string>
    <string name="texto_senha">DIGITE A SENHA:</string>
    <string name="texto_senha_config">SENHA:</string>
    <string name="texto_talhao">NUM. TALHÃO:</string>
    <string name="texto_lista_organismo">ORGANISMOS</string>
    <string name="texto_lista_carac_organismo">CARACTERÍSTICA</string>
    <string name="texto_questao">N. DE LEVANTAMENTO</string>
    <string name="texto_ponto_titulo_auditor">AUDITOR:</string>
    <string name="texto_ponto_auditor">19759 - ANDERSON DA SILVA DELGADO</string>
    <string name="texto_ponto_secao">SEÇÃO: 680 - OCIMAR BETITO E OUTRA</string>
    <string name="texto_ponto_talhao">TALHÃO: 2</string>
    <string name="texto_padrao_excluir">EXCLUIR</string>
    <string name="texto_padrao_inserir">INSERIR</string>
    <string name="texto_padrao_enviar">ENVIAR DADOS</string>
    <string name="texto_msg_ponto">DESEJA INSERIR PONTO 1?</string>
    <string name="texto_padrao_sim">SIM</string>
    <string name="texto_padrao_nao">NÃO</string>
    <string name="texto_lista_tipo_apont">TIPO</string>
    <string name="texto_lista_cabecalho">CABEÇALHO</string>
    <string name="texto_colhedora">COLHEDORA 725</string>
    <string name="texto_motorista">MOTORISTA: 19759 - ANDERSON DA SILVA DELGADO</string>
    <string name="texto_frente">FRENTE 1</string>
    <string name="texto_turno">TURNO</string>
    <string name="texto_padrao_finalizar">FINALIZAR</string>
    <string name="texto_equip">N. EQUIPAMENTO:</string>
    <string name="texto_lista_tipo_colheita">TIPO DE COLHEITA</string>
    <string name="texto_tolete">TOLETE (KG):</string>
    <string name="texto_cana_inteira">CANA INTEIRA (KG):</string>
    <string name="texto_tara">TARA (KG):</string>
    <string name="texto_toco">TOCO (KG):</string>
    <string name="texto_pedaco">PEDAÇO (KG):</string>
    <string name="texto_repique">REPIQUE (KG):</string>
    <string name="texto_ponteiro">PONTEIRO (KG):</string>
    <string name="texto_lascas">LASCAS (KG):</string>
    <string name="texto_msg_observ">OBSERVAÇÕES</string>
    <string name="title_activity_questao_perda">QuestaoPerdaActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
