<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ListaPontosFitoActivity">

    <TextView
        android:id="@+id/textViewTituloAuditor"
        style="@style/TextViewMenuNegrito"
        android:text="@string/texto_ponto_titulo_auditor" />

    <TextView
        android:id="@+id/textViewAuditor"
        style="@style/TextViewMenuNormal"
        android:text="@string/texto_ponto_auditor" />

    <TextView
        android:id="@+id/textViewSecao"
        style="@style/TextViewMenuNegrito"
        android:text="@string/texto_ponto_secao" />

    <TextView
        android:id="@+id/textViewTalhao"
        style="@style/TextViewMenuNegrito"
        android:paddingBottom="5dp"
        android:text="@string/texto_ponto_talhao" />

    <ListView
        android:id="@+id/listViewPontos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonInserirPonto"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_padrao_inserir" />

    <LinearLayout
        android:id="@+id/rightRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonExcluirAnalise"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_excluir" />

        <Button
            android:id="@+id/buttonFinalizarAnalise"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_finalizar" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonParadaFito"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_padrao_parada" />

</LinearLayout>