<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.ConfigActivity">

    <TextView
        android:id="@+id/textViewTipoConfig"
        style="@style/TextViewConfig"
        android:text="@string/texto_tipo_config" />

    <TextView
        android:id="@+id/textViewTurmaConfig"
        style="@style/TextViewConfig"
        android:text="@string/texto_turma_config" />

    <TextView
        android:id="@+id/textViewFuncConfig"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_lider_func_config" />

    <EditText
        android:id="@+id/editTextFuncConfig"
        style="@style/EditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewNLinhaConfig"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_num_linha_config" />

    <EditText
        android:id="@+id/editTextNLinhaConfig"
        style="@style/EditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewSenhaConfig"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_senha_config" />

    <EditText
        android:id="@+id/editTextSenhaConfig"
        style="@style/EditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
    </EditText>

    <LinearLayout
        android:id="@+id/rightRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonCancConfig"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_cancelar" />

        <Button
            android:id="@+id/buttonSalvarConfig"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_salvar" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonAtualizarDados"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_atualizar_dados" />

</LinearLayout>